<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
android:orientation="vertical" 
android:layout_width="fill_parent" 
android:layout_height="fill_parent"
android:background="@drawable/popbg"> 

<Button
    android:id="@+id/currentOrder"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/textview_border"
    android:text="@string/changerole"
    android:textColor="@color/white"
    android:textSize="15sp" />

<Button
    android:id="@+id/historyOrder"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:background="@drawable/textview_border"
    android:layout_gravity="center_horizontal"
    android:text="@string/more_info"
    android:textColor="@color/white"
    android:textSize="15sp" />

<Button
    android:id="@+id/logout_sys"
    android:layout_width="150dip"
    android:layout_height="wrap_content"
    android:background="@drawable/textview_border"
    android:layout_gravity="center_horizontal"
    android:text="@string/logout_sys"
    android:textColor="@color/white"
    android:textSize="15sp" />
</LinearLayout> 

