<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:id="@+id/main_fragment">
    
    <include
        android:id="@+id/title"
        layout="@layout/main_title" />
    
	<TabHost
    android:id="@+id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_gravity="bottom"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_button0"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/myorder_btn_bg"
                android:tag="radio_button0"
                android:text="@string/my_order"
                android:textColor="@drawable/primarybar_txt"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button1"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/query_btn_bg"
                android:tag="radio_button1"
                android:textColor="@drawable/primarybar_txt"
                android:text="@string/query_info"
                android:textSize="16dp" />

            <RadioButton
                android:id="@+id/radio_button2"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/user_btn_bg"
                android:tag="radio_button2"
                android:textColor="@drawable/primarybar_txt"
                android:text="@string/history_order"
                android:textSize="16dp" />

<!--             <RadioButton
                android:id="@+id/radio_button3"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/more"
                android:tag="radio_button3"
                android:text="@string/more"
                android:textSize="16dp" /> -->
        </RadioGroup>
   	 </LinearLayout>
	</TabHost>
</LinearLayout>