<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/info_bg"
     android:id="@+id/guest_propertyfragment" >

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"             
    android:layout_centerHorizontal="true"
        android:layout_margin="5dip"
        android:background="@drawable/shape"
        android:padding="5dip">
    <TextView
        android:id="@+id/guest_property_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="30dp"
        android:textSize="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="14dp"
        android:textSize="16dp"
        android:text="@string/phone_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/guest_property_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:textSize="16dp"
        android:layout_alignLeft="@+id/guest_property_username"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/guest_property_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/guest_property_phone"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16dp" />    

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:src="@drawable/divide_line_xu" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="14dp"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/guest_property_username"
        android:layout_marginTop="16dp"
        android:src="@drawable/divide_line_xu" />

   <ImageView
       android:id="@+id/imageView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       android:layout_below="@+id/guest_property_phone"
       android:layout_marginTop="16dp"
       android:src="@drawable/divide_line_xu" />

   <ImageView
       android:id="@+id/imageView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
       android:layout_below="@+id/guest_property_sex"
       android:layout_marginTop="16dp"
       android:src="@drawable/divide_line_xu" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/textView2"
       android:layout_below="@+id/imageView4"
       android:layout_marginTop="14dp"
       android:text="性别"
       android:textAppearance="?android:attr/textAppearanceLarge"
       android:textSize="16dp" />

   <Button
       android:id="@+id/guest_property_changebtn"
       android:layout_width="200dp"
       android:layout_height="50dp"
       android:layout_centerHorizontal="true"
       android:layout_below="@+id/imageView5"
       android:layout_marginTop="20dp"
       android:background="@drawable/corner_button"
       android:paddingBottom="0dp"
       android:paddingTop="0dp"
       android:textColor="@color/title_color"
       android:text="@string/changeproperty" />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBottom="@+id/imageView2"
       android:layout_alignLeft="@+id/textView1"
       android:layout_marginBottom="14dp"
       android:text="我的信息"
       android:textSize="20dp"
       android:textColor="@color/light_grey"
       android:textAppearance="?android:attr/textAppearanceSmall" />

   <Button
       android:id="@+id/guest_property_logoutbtn"
       android:layout_width="200dp"
       android:layout_height="50dp"
       android:layout_alignLeft="@+id/guest_property_changebtn"
       android:layout_below="@+id/guest_property_changebtn"
       android:layout_marginTop="5dp"
       android:background="@drawable/corner_button"
       android:paddingTop="0dp"
       android:text="@string/logout"
       android:textColor="@color/title_color" />
</RelativeLayout>
</RelativeLayout>
